* add blog for reverse engineering summary
* add blog for reverse engineering of android

* delete smaple blogs

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Hello World
-	<script>
-		window.location.replace(window.location.href + "blog/")
-	</script>
+Welcome to Coder Jay's website
+<script>
+	window.location.replace(window.location.href + "blog/")
+</script>
